--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
+    	"php": ">=5.6",
         "slim/slim": "^3.0",
         "linecorp/line-bot-sdk": "^1.4",
         "vlucas/phpdotenv": "^2.4"
